--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,12 +2,14 @@
 <resources>
     <string name="app_name">Juggling Lab</string>
     
+    <!-- Home -->
     <string name="home_btn_pattern_entry">Pattern Entry</string>
     <string name="home_btn_generator">Generator</string>
     <string name="home_btn_tutorials">Tutorials</string>
     <string name="home_btn_my_profile">My Profile</string>
     <string name="home_btn_video">Video</string>
     
+    <!-- Pattern entry -->
     <string name="pattern_entry_txt_pattern">Pattern Entry</string>
     <string name="pattern_entry_edit_pattern">3</string>
     <string name="pattern_entry_txt_beats_per_second">BPS</string>
@@ -18,5 +20,13 @@
     <string name="pattern_entry_txt_manual_settings">Manual settings</string>
     <string name="pattern_entry_btn_juggle">Juggle</string>
     
+    <!-- Generator -->
     <string name="generator_btn_run">Run</string>
+    
+    <!-- Tutorials -->
+    
+    <!-- My profile -->
+    
+    <!-- Video -->
+    
 </resources>
