--- a/trunk/res/values/strings.xml
+++ b/trunk/res/values/strings.xml
@@ -54,7 +54,23 @@
     <!-- Tutorials -->
     
     <!-- My profile -->
+    <string name="my_profile_tab_favs">Favs</string>
+    <string name="my_profile_tab_practicing">Practicing</string>
+    <string name="my_profile_tab_records">Records</string>
     
     <!-- Video -->
+    
+    <!-- Menu -->
+    <string name="menu_home_settings">Settings</string>
+    <string name="menu_home_about">About</string>
+    
+    <!-- Settings -->
+    <string name="settings_home_category_user">User</string>
+    <string name="settings_home_cb_advanced_mode_title">Advanced mode</string>
+    <string name="settings_home_cb_advanced_mode_summary">Activate the advanced mode</string>
+    <string name="settings_home_category_animation">Animation</string>
+    
+    <!-- About -->
+    <string name="about_txt_todo">Bazinga !</string>
     
 </resources>
