--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="home_btn_pattern_entry">Pattern Entry</string>
     <string name="home_btn_generator">Generator</string>
     <string name="home_btn_tutorials">Tutorials</string>
+    <string name="home_btn_pattern_list">Pattern List</string>
     <string name="home_btn_my_profile">My Profile</string>
     <string name="home_btn_video">Video</string>
     
@@ -57,6 +58,9 @@
     <!-- Tutorials -->
     <string name="tutorials_title">Tutorials</string>
     
+    <!-- Pattern List -->
+    <string name="pattern_list_title">Pattern List</string>
+    
     <!-- My profile -->
     <string name="my_profile_title">My profile</string>
     <string name="my_profile_tab_favs">Favs</string>
@@ -67,8 +71,8 @@
     <string name="video_title">Video</string>
     
     <!-- Menu -->
-    <string name="menu_home_settings">Settings</string>
-    <string name="menu_home_about">About</string>
+    <string name="menu_settings">Settings</string>
+    <string name="menu_about">About</string>
     
     <!-- Settings -->
     <string name="settings_home_category_user">User</string>
