--- a/trunk/res/values/strings.xml
+++ b/trunk/res/values/strings.xml
@@ -74,7 +74,7 @@
     <string name="menu_settings">Settings</string>
     <string name="menu_about">About</string>
     
-    <!-- Settings -->
+    <!-- Settings : Home -->
     <string name="settings_home_category_user">User</string>
     <string name="settings_home_cb_advanced_mode_title">Advanced mode</string>
     <string name="settings_home_cb_advanced_mode_summary">Activate the advanced mode</string>
@@ -84,6 +84,22 @@
     <string name="settings_home_txt_max_seconds_title">Time</string>
     <string name="settings_home_txt_max_seconds_summary">Maximum number of seconds</string>
     <string name="settings_home_category_animation">Animation</string>
+    
+    <!-- Settings : Animation -->
+    <string name="settings_animation_category_animation">Animation</string>
+    <string name="settings_animation_category_prop">Prop</string>
+    <string name="settings_animation_category_prop_type">Type</string>
+    <string name="settings_animation_category_prop_color">Color</string>
+    <string name="settings_animation_category_prop_size">Size</string>
+    <string name="settings_animation_category_juggler">Juggler</string>
+    <string name="settings_animation_txt_juggler_height_title">Height</string>
+    <string name="settings_animation_txt_juggler_height_summary">The height of the juggler</string>
+    <string name="settings_animation_txt_juggler_weight_title">Weight</string>
+    <string name="settings_animation_txt_juggler_weight_summary">The weight of the juggler</string>
+    <string name="settings_animation_category_juggler_hat">Hat</string>
+    <string name="settings_animation_category_juggler_glasses">Glasses</string>
+    <string name="settings_animation_category_juggler_beard">Beard</string>
+    <string name="settings_animation_category_background">Background</string>
     
     <!-- About -->
     <string name="about_txt_todo">Bazinga !</string>
