--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -106,8 +106,8 @@
     
     <!-- QuickActions -->
     <string name="quickactions_fav">Fav</string>
-    <string name="quickactions_practising">Practising</string>
-    <string name="quickactions_record">Record</string>
+    <string name="quickactions_catches">Catches</string>
+    <string name="quickactions_goal">Goal</string>
     <string name="quickactions_share">Share</string>
     <string name="quickactions_share_working">I am working on the</string>
     <string name="quickactions_share_thanks">thanks to Juggling Lab for Android !</string>
