--- a/trunk/res/values/strings.xml
+++ b/trunk/res/values/strings.xml
@@ -118,7 +118,7 @@
     
     <!-- About -->
     <string name="about_title">About</string>
-    <string name="about_txt_todo">Bazinga !</string>
+    <string name="about_txt">Juggling Lab is based on the desktop application also called Juggling Lab http://jugglinglab.sourceforge.net/.\nJuggling Lab is an application for creating and animating juggling patterns. Its main goals are to help people learn juggling patterns, and to assist in inventing new ones.</string>
     
     <!-- QuickActions -->
     <string name="quickactions_fav">Fav</string>
