Added the ImageView to the Collections list too.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -135,6 +135,6 @@
     
     <!-- Other -->
     <string name="txt_no_patterns">No patterns found!</string>
-    <string name="alert_dialog_two_buttons_title">Are you sure ?</string>
+    <string name="alert_dialog_two_buttons_title">Delete %s ?</string>
     
 </resources>
