--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -78,6 +78,8 @@
     
     <!-- Menu -->
     <string name="menu_settings">Settings</string>
+    <string name="menu_help">Help</string>
+    <string name="menu_about">About</string>
     
     <!-- Settings : Home -->
     <string name="settings_home_category_user">User</string>
