--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -147,7 +147,7 @@
     <string name="settings_category_generator">Generator</string>
     <string name="settings_txt_max_patterns_title">Patterns</string>
     <string name="settings_txt_max_patterns_summary">Maximum number of patterns to print</string>
-    <string name="settings_txt_max_seconds_title">Time</string>
+    <string name="settings_txt_max_seconds_title">Timeout</string>
     <string name="settings_txt_max_seconds_summary">Maximum number of seconds</string>
 
     <!-- TODO Fred: Change the names of the strings to follow the pattern settings_{type}_{name} with type in [category, txt, cb, ...]-->
