--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -115,6 +115,7 @@ Exact definition can be at the following link: http://www.gnu.org/licenses/lgpl.
     <string name="menu_about">About</string>
     
     <!-- QuickActions -->
+    <string name="quickactions">QuickActions</string>
     <string name="quickactions_trick_collections">Labels</string>
     <string name="quickactions_trick_share">Share using</string>
     <string name="quickactions_trick_share_training">Training %1$s thanks to Juggling Lab for Android !</string>
